@@ -2,6 +2,7 @@ MANIFEST
 MANIFEST.SKIP
 Makefile.PL
 t/date.t
+t/bug31037.t
 lib/Date/Simple.pm
 lib/Date/Simple/Fmt.pm
 lib/Date/Simple/ISO.pm
