@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Date-Simple
-version:             3.03_01
+version:             3.03_02
 abstract:            ~
 license:             ~
 author:              ~
