@@ -1,3 +1,8 @@
+2008-01-10  Igor Sutton <igor.sutton@yahoo.co.uk>
+
+	* Copy default_format from old Date::Simple object when adding or
+	subtracting (bug #31037).
+	
 2008-01-09  Igor Sutton <igor.sutton@yahoo.co.uk>
 
 	* Applied patch proposed for 64bit support (bug #28549).
